src/objects/OrderEntryInfo__c.object
<CustomObject>
    <fields>
        <fullName>AccountRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計</label>
        <referenceTo>AccountAcount__c</referenceTo>
        <relationshipLabel>オーダーエントリ情報</relationshipLabel>
        <relationshipName>OrderAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CookDoneFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>料理済フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CookInfo__c</fullName>
        <label>料理情報</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeadRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ご予約</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>オーダーエントリ情報</relationshipLabel>
        <relationshipName>RefLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <label>オーダーステータス</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderTimeStmp__c</fullName>
        <label>オーダー時間別</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderTime__c</fullName>
        <label>オーダー時間</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintInfo__c</fullName>
        <label>印刷設備名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>お部屋</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>オーダーエントリ情報</relationshipLabel>
        <relationshipName>OrderRoomRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SearchDate__c</fullName>
        <label>利用日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trans__c</fullName>
        <label>会計明細</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>オーダーエントリ情報</label>
    <nameField>
        <label>No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>